--- a/index.html
+++ b/index.html
@@ -186,8 +186,11 @@
 
             <div class="container slider-container">
                 <div class="slider__wrapper">
-                    <ul class="slider__list">
+                    <ul class="slider__list" id="slider-list">
                         <li class="slider__item">
+                            <div class="slider__item-img-wrapper">
+                                <img class="slider__item-img" src="./img/icons/order-page/bars1.png" alt="">
+                            </div>
                             <div class="slider-desc">
                                 <div class="dropdown">
                                     <div class="dropdown__icon-wrapper">
@@ -242,7 +245,120 @@
 
                             </div>
                         </li>
-                        
+                        <li class="slider__item">
+                            <div class="slider__item-img-wrapper">
+                                <img class="slider__item-img" src="./img/icons/order-page/bars1.png" alt="">
+                            </div>
+                            <div class="slider-desc">
+                                <div class="dropdown">
+                                    <div class="dropdown__icon-wrapper">
+                                        <img class="dropdown__icon" src="./img/icons/chocolate-bar.svg" alt="">
+                                        <span class="dropdown__title">Состав</span>
+                                    </div>
+                                    <div class="dropdown__menu">
+                                        <ul class="dropdown__list">
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/grape.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Виноград</span>
+                                                <span class="dropdown__item-weight">25г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/nut.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Орех</span>
+                                                <span class="dropdown__item-weight">32г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/almond.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Кунжутное семя</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <h2 class="slider-desc__title">Test test tst”</h2>
+                                <div class="slider-desc__subtitle">
+                                    <p>
+                                        Test test test Test test test Test test test Test test test
+                                    </p>
+                                </div>
+                                <div class="slider-desc__props">
+                                    <div class="slider-desc__props-col">
+                                        <span class="slider-desc__props-name">Test test test</span>
+                                        <span class="slider-desc__props-value">110 ккал</span>
+                                    </div>
+                                    <div class="slider-desc__props-col">
+                                        <span class="slider-desc__props-name">Test test test</span>
+                                        <span class="slider-desc__props-value">95 грамм</span>
+                                    </div>
+                                </div>
+                                <div class="slider-desc__price">140 ₽</div>
+                                <div class="order-form-btn btn">Заказать</div>
+
+                            </div>
+                        </li>
+                        <li class="slider__item">
+                            <div class="slider__item-img-wrapper">
+                                <img class="slider__item-img" src="./img/icons/order-page/bars1.png" alt="">
+                            </div>
+                            <div class="slider-desc">
+                                <div class="dropdown">
+                                    <div class="dropdown__icon-wrapper">
+                                        <img class="dropdown__icon" src="./img/icons/chocolate-bar.svg" alt="">
+                                        <span class="dropdown__title">Состав</span>
+                                    </div>
+                                    <div class="dropdown__menu">
+                                        <ul class="dropdown__list">
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/grape.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Виноград</span>
+                                                <span class="dropdown__item-weight">25г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/nut.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Орех</span>
+                                                <span class="dropdown__item-weight">32г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/almond.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Кунжутное семя</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <h2 class="slider-desc__title">Last last last”</h2>
+                                <div class="slider-desc__subtitle">
+                                    <p>
+                                        Last last last ast last last ast last last ast last last
+                                    </p>
+                                </div>
+                                <div class="slider-desc__props">
+                                    <div class="slider-desc__props-col">
+                                        <span class="slider-desc__props-name">ast last last</span>
+                                        <span class="slider-desc__props-value">110 ккал</span>
+                                    </div>
+                                    <div class="slider-desc__props-col">
+                                        <span class="slider-desc__props-name">ast last last</span>
+                                        <span class="slider-desc__props-value">95 грамм</span>
+                                    </div>
+                                </div>
+                                <div class="slider-desc__price">140 ₽</div>
+                                <div class="order-form-btn btn">Заказать</div>
+
+                            </div>
+                        </li>
                     </ul>
                 </div>
 
@@ -482,6 +598,6 @@
     </ul>
 
 </div>
-
+    <script src="./js/index.js"></script>
 </body>
 </html>
