--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <a class="logo" href="/">
                         <img class="logo__pic" src="./img/icons/logo.png" alt="">
                     </a>
-                    <nav class="navbar">
+                    <nav class="navbar" id="navbar">
                         <ul class="navbar__list">
-                            <li class="navbar__item">
+                            <li class="navbar__item ">
                                 <a class="navbar__link" href="/">О нас</a>
                             </li>
                             <li class="navbar__item">
@@ -52,7 +52,7 @@
                         <span class="phone-number__text">8 800 903 90 90</span>
                     </a>
 
-                    <div class="hamburger">
+                    <div class="hamburger" id="burger">
                         <span class="hamburger__item"></span>
                         <span class="hamburger__item"></span>
                         <span class="hamburger__item"></span>
@@ -578,6 +578,13 @@
     </div>
 </div>
 
+<div class="close-icon-wrapper" id="burger-close">
+    <svg class="close-icon" viewBox="0 0 20 20">
+        <path fill="#fff" class="st0" d="M12.2,9l5.2-5.2c0.8-0.8,0.8-2,0-2.7l-0.4-0.4c-0.8-0.8-2-0.8-2.7,0L9,5.8L3.8,0.6C3-0.2,1.8-0.2,1,0.6L0.6,1
+	c-0.8,0.8-0.8,2,0,2.7L5.8,9l-5.2,5.2c-0.8,0.8-0.8,2,0,2.7L1,17.4c0.8,0.8,2,0.8,2.7,0L9,12.2l5.2,5.2c0.8,0.8,2,0.8,2.7,0l0.4-0.4
+	c0.8-0.8,0.8-2,0-2.7L12.2,9z"/>
+    </svg>
+</div>
 <div class="fixed-menu">
     <ul class="fixed-menu__list">
         <li class="fixed-menu__item">
