fix slider section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
-    <title>choco 1st week</title>
+    <title>choco 3th week</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -210,7 +210,7 @@
                                                 <div class="dropdown__item-icon-wrapper">
                                                     <img class="dropdown__item-icon" src="./img/icons/nut.svg" alt="">
                                                 </div>
-                                                <span class="dropdown__item-name">Орех</span>
+                                                <span class="dropdown__item-name">Грецкий орех</span>
                                                 <span class="dropdown__item-weight">32г</span>
                                             </li>
                                             <li class="dropdown__item">
@@ -218,6 +218,27 @@
                                                     <img class="dropdown__item-icon" src="./img/icons/almond.svg" alt="">
                                                 </div>
                                                 <span class="dropdown__item-name">Кунжутное семя</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/powder.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Сухое молоко</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/apitherapy.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Зам.сахара</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/beans.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Какао бобы</span>
                                                 <span class="dropdown__item-weight">20г</span>
                                             </li>
                                         </ul>
@@ -240,8 +261,11 @@
                                         <span class="slider-desc__props-value">95 грамм</span>
                                     </div>
                                 </div>
-                                <div class="slider-desc__price">140 ₽</div>
-                                <div class="order-form-btn btn">Заказать</div>
+                                <div class="slider-desc__price-section">
+                                    <div class="slider-desc__price">140 ₽</div>
+                                    <div class="order-form-btn btn">Заказать</div>
+                                </div>
+
 
                             </div>
                         </li>
@@ -268,7 +292,7 @@
                                                 <div class="dropdown__item-icon-wrapper">
                                                     <img class="dropdown__item-icon" src="./img/icons/nut.svg" alt="">
                                                 </div>
-                                                <span class="dropdown__item-name">Орех</span>
+                                                <span class="dropdown__item-name">Грецкий орех</span>
                                                 <span class="dropdown__item-weight">32г</span>
                                             </li>
                                             <li class="dropdown__item">
@@ -278,27 +302,52 @@
                                                 <span class="dropdown__item-name">Кунжутное семя</span>
                                                 <span class="dropdown__item-weight">20г</span>
                                             </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/powder.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Сухое молоко</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/apitherapy.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Зам.сахара</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/beans.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Какао бобы</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
-                                <h2 class="slider-desc__title">Test test tst”</h2>
+                                <h2 class="slider-desc__title">Батончик “Морские водоросли”</h2>
                                 <div class="slider-desc__subtitle">
                                     <p>
-                                        Test test test Test test test Test test test Test test test
+                                        Гранола из морских водорослей с овсом, миндалем и тыквенными семечками.
+                                        В состав также входят: сухое молоко, заменитель сахара и какао бобы.
                                     </p>
                                 </div>
                                 <div class="slider-desc__props">
                                     <div class="slider-desc__props-col">
-                                        <span class="slider-desc__props-name">Test test test</span>
-                                        <span class="slider-desc__props-value">110 ккал</span>
+                                        <span class="slider-desc__props-name">Каллорийность</span>
+                                        <span class="slider-desc__props-value">120 ккал</span>
                                     </div>
                                     <div class="slider-desc__props-col">
-                                        <span class="slider-desc__props-name">Test test test</span>
-                                        <span class="slider-desc__props-value">95 грамм</span>
+                                        <span class="slider-desc__props-name">Вес</span>
+                                        <span class="slider-desc__props-value">98 грамм</span>
                                     </div>
                                 </div>
-                                <div class="slider-desc__price">140 ₽</div>
-                                <div class="order-form-btn btn">Заказать</div>
+                                <div class="slider-desc__price-section">
+                                    <div class="slider-desc__price">140 ₽</div>
+                                    <div class="order-form-btn btn">Заказать</div>
+                                </div>
+
 
                             </div>
                         </li>
@@ -325,7 +374,7 @@
                                                 <div class="dropdown__item-icon-wrapper">
                                                     <img class="dropdown__item-icon" src="./img/icons/nut.svg" alt="">
                                                 </div>
-                                                <span class="dropdown__item-name">Орех</span>
+                                                <span class="dropdown__item-name">Грецкий орех</span>
                                                 <span class="dropdown__item-weight">32г</span>
                                             </li>
                                             <li class="dropdown__item">
@@ -335,27 +384,52 @@
                                                 <span class="dropdown__item-name">Кунжутное семя</span>
                                                 <span class="dropdown__item-weight">20г</span>
                                             </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/powder.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Сухое молоко</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/apitherapy.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Зам.сахара</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/beans.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Какао бобы</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
-                                <h2 class="slider-desc__title">Last last last”</h2>
+                                <h2 class="slider-desc__title">Батончик “Test test”</h2>
                                 <div class="slider-desc__subtitle">
                                     <p>
-                                        Last last last ast last last ast last last ast last last
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque distinctio facere laborum modi nulla quaerat quo, ut.
+                                        Ad cupiditate, distinctio dolores dolorum enim esse labore quae quos sequi tempora temporibus!
                                     </p>
                                 </div>
                                 <div class="slider-desc__props">
                                     <div class="slider-desc__props-col">
-                                        <span class="slider-desc__props-name">ast last last</span>
-                                        <span class="slider-desc__props-value">110 ккал</span>
+                                        <span class="slider-desc__props-name">Каллорийность</span>
+                                        <span class="slider-desc__props-value">110000 ккал</span>
                                     </div>
                                     <div class="slider-desc__props-col">
-                                        <span class="slider-desc__props-name">ast last last</span>
-                                        <span class="slider-desc__props-value">95 грамм</span>
+                                        <span class="slider-desc__props-name">Вес</span>
+                                        <span class="slider-desc__props-value">995 грамм</span>
                                     </div>
                                 </div>
-                                <div class="slider-desc__price">140 ₽</div>
-                                <div class="order-form-btn btn">Заказать</div>
+                                <div class="slider-desc__price-section">
+                                    <div class="slider-desc__price">9 990 ₽</div>
+                                    <div class="order-form-btn btn">Заказать</div>
+                                </div>
+
 
                             </div>
                         </li>
