--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
                     </a>
                     <nav class="navbar" id="navbar">
                         <ul class="navbar__list">
-                            <li class="navbar__item ">
-                                <a class="navbar__link" href="/">О нас</a>
+                            <li class="navbar__item">
+                                <a class="navbar__link" href="#">О нас</a>
                             </li>
                             <li class="navbar__item">
-                                <a class="navbar__link" href="/">Батончики</a>
+                                <a class="navbar__link" href="#">Батончики</a>
                             </li>
                             <li class="navbar__item">
-                                <a class="navbar__link" href="/">Команда</a>
+                                <a class="navbar__link" href="#">Команда</a>
                             </li>
                             <li class="navbar__item">
-                                <a class="navbar__link" href="/">Меню</a>
+                                <a class="navbar__link" href="#">Меню</a>
                             </li>
                             <li class="navbar__item">
-                                <a class="navbar__link" href="/">Отзывы</a>
+                                <a class="navbar__link" href="#">Отзывы</a>
                             </li>
                             <li class="navbar__item">
-                                <a class="navbar__link" href="/">Как мы работает</a>
+                                <a class="navbar__link" href="#">Как мы работает</a>
                             </li>
                             <li class="navbar__item">
-                                <a class="navbar__link" href="/">Контакты</a>
+                                <a class="navbar__link" href="#">Контакты</a>
                             </li>
                         </ul>
                     </nav>
@@ -52,18 +52,54 @@
                         <span class="phone-number__text">8 800 903 90 90</span>
                     </a>
 
-                    <div class="hamburger" id="burger">
-                        <span class="hamburger__item"></span>
-                        <span class="hamburger__item"></span>
-                        <span class="hamburger__item"></span>
+                    <div class="burger" id="burger">
+                        <span class="burger__line"></span>
+                        <span class="burger__line"></span>
+                        <span class="burger__line"></span>
                     </div>
-                    <div class="close-icon-wrapper" id="burger-close">
-                        <svg class="close-icon" viewBox="0 0 20 20">
-                            <path fill="#fff" class="st0" d="M12.2,9l5.2-5.2c0.8-0.8,0.8-2,0-2.7l-0.4-0.4c-0.8-0.8-2-0.8-2.7,0L9,5.8L3.8,0.6C3-0.2,1.8-0.2,1,0.6L0.6,1
-	c-0.8,0.8-0.8,2,0,2.7L5.8,9l-5.2,5.2c-0.8,0.8-0.8,2,0,2.7L1,17.4c0.8,0.8,2,0.8,2.7,0L9,12.2l5.2,5.2c0.8,0.8,2,0.8,2.7,0l0.4-0.4
-	c0.8-0.8,0.8-2,0-2.7L12.2,9z"/>
-                        </svg>
-                    </div>
+                    <div class="overlay" id="overlay">
+                        <div class="overlay__menu" id="overlay__menu">
+                            <nav class="menu">
+                                <ul class="menu__list">
+                                    <li class="menu__item">
+                                        <a href="#about-us" class="menu__link">
+                                            О нас
+                                        </a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="#bars" class="menu__link">
+                                            Батончики
+                                        </a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="#team" class="menu__link">
+                                            Команда
+                                        </a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="#menu" class="menu__link">
+                                            Меню
+                                        </a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="#reveiws" class="menu__link">
+                                            Отзывы
+                                        </a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="how-we-working" class="menu__link">
+                                            Как мы работаем
+                                        </a>
+                                    </li>
+                                    <li class="menu__item">
+                                        <a href="#contacts" class="menu__link">
+                                            Контакты
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                        </div>
 
                 </header>
 
@@ -111,7 +147,8 @@
         </section>
 
 
-        <section class="section benefits-section">
+        <section class="section benefits-section" id="about-us">
+
             <div class="container">
                 <div class="headline">
                     <h2 class="section__title headline__title">почему chocco?</h2>
@@ -186,7 +223,7 @@
 
         </section>
 
-        <section class="section slider-section">
+        <section class="section slider-section" id="bars">
             <div class="arrow arrow--left">
                 <img class="arrow--left-icon" src="./img/icons/arrow.svg" alt="">
             </div>
@@ -452,7 +489,7 @@
             </div>
         </section>
 
-        <section class="section reviews-section">
+        <section class="section reviews-section" id="reveiws">
             <div class="container">
                 <h2 class="section__title">Отзывы</h2>
                 <div class="reviews">
@@ -601,7 +638,7 @@
         </section>
 
 
-        <section class="section map-section">
+        <section class="section map-section" id="contacts">
             <div id="map"></div>
             <footer class="footer">
                 <div class="container footer__container">
